# CryoRefine

./: .gitignore  config.yaml  main.py  pyproject.toml
nameToBeDetermined/: IO.py  config.py  configParser.py  dataloader.py  encoder.py  newencoder.py  operation2D.py  operation3D.py  preprocess.py  pretrain.py  projector.py  test.py
rubic/: config.yaml
rubic/postprocess/: backprojection.py
rubic/preprocess/: backprojection.py  io.py  rotate3d.py
rubic/swintf/: data.py  dist.py  normalize.py  wavelength.py
rubic/tools/: operation_2D.py  operation_3D.py
src/cryoRefine/SwinTransformer/: swin.py
src/cryoRefine/preprocess/: __init__.py  mrc.py  normalize.py  projection.py  test.py
src/vit/: ctf.py  projection.py
tests/: context.py  fourier.py  test.py  vit.py
